file is modified

--- a/Git/git.html
+++ b/Git/git.html
@@ -22,6 +22,11 @@
             <td>26</td>
             <td>7894584</td>
         </tr>
+        <tr>
+            <td>Adhi</td>
+            <td>31</td>
+            <td>895565</td>
+        </tr>
     </table>
 </body>
 </html>
